--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.stimulus">
+    package="mobi.stimulus.accesoprivado">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:screenOrientation = "landscape">
-        <activity android:name="com.example.stimulus.MainActivity">
+        <activity android:name="mobi.stimulus.accesoprivado.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
