--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:screenOrientation = "landscape">
+        android:screenOrientation = "landscape"
+        android:usesCleartextTraffic="true">
         <activity android:name="mobi.stimulus.accesoprivado.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
